<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <EditText
            android:layout_marginTop="-2dp"
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:drawableLeft="@drawable/email"
            android:hint="@string/enter_emailid"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="#bbbbbb"
            android:textCursorDrawable="@drawable/color_cursor" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/edittext_bottom_bg"
            android:drawableLeft="@drawable/password"
           
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#bbbbbb"
            android:textCursorDrawable="@drawable/color_cursor" />

        <EditText
            android:id="@+id/etPassag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/edittext_bottom_bg"
            android:drawableLeft="@drawable/passwordag"
         
            android:hint="@string/enter_password_again"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#bbbbbb"
            android:textCursorDrawable="@drawable/color_cursor" />

        <Button
            android:id="@+id/btnSearch"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_default_bg"
            android:padding="10dp"
            android:text="@string/sign_up"
            />
         
        
    </LinearLayout>
    

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
         >

        <Button
            android:id="@+id/button2"
            style="@style/DefaultButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="@drawable/button_1"
            android:drawableLeft="@drawable/google"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/goosu"
            android:textColor="#FF1C00"
            android:textSize="17sp" />

        <Button
            android:id="@+id/currloc"
            style="@style/DefaultButtonText"
            android:layout_width="0dp"
           
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/button_1"
            android:drawableLeft="@drawable/facebook"
            android:paddingLeft="10dp"
            android:text="@string/fbsu"
            android:textColor="#003399"
            android:textSize="17sp" />
        
       
    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/op"
        style="@style/DefaultButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_default_bg1"
        android:text="@string/connect"
        android:textAppearance="@android:style/TextAppearance.Theme"
        android:textColor="#fff"
        android:textSize="25sp"
         />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/add_some_places"
        android:src="@drawable/icon2" />

</RelativeLayout>