<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/op"
            style="@style/DefaultButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/edittext_default_bg"
            android:drawableLeft="@drawable/user"
            android:hint="@string/enter_username"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="#bbbbbb"
            android:textCursorDrawable="@drawable/color_cursor" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/edittext_bottom_bg"
            android:drawableLeft="@drawable/password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#bbbbbb"
            android:textCursorDrawable="@drawable/color_cursor" />

        <Button
            android:id="@+id/btnSingIn"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_default_bg"
            android:padding="10dp"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/btnSearch"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_default_bg"
            android:padding="10dp"
            android:text="@string/new_user" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/add_some_places"
        android:src="@drawable/icon2" />

</RelativeLayout>